clusters/apps/env/production/media/readarr/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${APP}
  annotations:
    kubernetes.io/ingress.class: "traefik-internal"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      middlewares:
        - name: oauth-auth
          namespace: auth-system
        - name: oauth-errors
          namespace: auth-system
      priority: 10
      services:
        - name: ${APP}
          port: 8787
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`) && PathPrefix(`/oauth2/`)"
      priority: 15
      middlewares:
        - name: oauth-headers
          namespace: auth-system
      services:
        - name: google-auth-oauth2-proxy
          namespace: auth-system
          port: 80
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
